# c-t9

./: CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  meson.build
data/trump/: twitter.txt
include/: main.h  meson.build
include/t9/: config.h.in  corpus.h  errno.h  io.h  math.h  meson.build  model.h  node.h  path.h  timer.h  tree.h
libraries/: meson.build
libraries/kvec/: kvec.h  meson.build
libraries/list/: list.c  list.h  list_node.c  meson.build
src/: main.c  meson.build
src/t9/: corpus.c  io.c  math.c  meson.build  model.c  node.c  path.c  timer.c  tree.c
